src/css/style.css
:root {
  --primary-color: oklch(87.9% 0.169 91.605);
  --bg-color: oklch(0.974 0.003 174.48);
  --text-color: oklch(0.22 0.05 280);
  --gray-color: oklch(0.22 0.05 280/0.5);
  --black-color: oklch(0.22 0.05 280/0.5);
  --accent-color: oklch(0.978 0.058 102.16);
}

body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0;
}

.calendar-container {
  width: 800px;
  padding: 20px;
  overflow: hidden;
}

.calendar-header {
  background: var(--primary-color);
  color: var(--text-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.2rem;
  padding: 2rem 5rem;
  margin-bottom: 2rem;
  border-radius: 1rem;
  box-shadow: 12px 12px 0px 0px var(--text-color);
  border: 5px solid var(--text-color);
}

.calendar-header button {
  background: rgba(255, 255, 255, 0.2);
  padding: 5px 12px;
  cursor: pointer;
  font-size: 2rem;
}

.calendar-header button:hover {
  background: rgba(255, 255, 255, 0.4);
}

.calendar-body {
  border-radius: 1rem;
  border: 5px solid var(--text-color);
  background-color: var(--bg-color);
  box-shadow: 12px 12px 0px 0px var(--text-color);
}

.grid {
  display: grid;
  grid-template-columns: repeat(7, 1fr);
  padding: 1.5rem;
  gap: 1rem;
}

.day-name {
  font-weight: bold;
  color: #888;
  text-align: center;
  padding: 20px 0px;
  font-size: 1rem;
  text-transform: uppercase;
}

.day {
  aspect-ratio: 1 / 1;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  transition: 0.2s;
  font-size: 1.5rem;
}

.day:hover:not(.empty) {
  background-color: var(--accent-color);
  color: var(--primary-color);
}

.today {
  background-color: var(--primary-color) !important;
  font-weight: bold;
}

.today:hover {
  color: var(--text-color) !important;
  background-color: var(--primary-color) !important;
}

.empty {
  cursor: default;
}

.buttons {
  font-weight: bold;
  font-family: "Press Start 2P", system-ui;
  font-size: 0.5rem;
  border: 5px solid var(--text-color);
  box-shadow: 4px 4px 0px 0px var(--text-color);
  color: var(--text-color);
  transition: all 0.2s;
  border-radius: 0.5rem;
}

.buttons:active {
  transform: translateX(4px) translateY(4px);
  box-shadow: none;
}

.grid-bg {
  position: absolute;
  inset: 0;
  z-index: -10;
  height: 100%;
  width: 100%;
  background-color: var(--bg-color);
  background-image: radial-gradient(var(--black-color) 1px, transparent 1px);
  background-size: 20px 20px;
}

.gap-line {
  height: 2px;
  background-color: var(--text-color);
  border-radius: 5px;
}

#time {
  font-size: 0.9rem;
}

.holiday {
  background-color: var(--accent-color);
  border: 2px dashed var(--text-color);
}

